--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "config": "^3.3.7",
     "cors": "^2.8.5",
     "dayjs": "^1.11.4",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
