--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts"
   },
@@ -16,7 +17,6 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.4.6",
-    "nanoid": "^4.0.0",
     "pino": "^8.3.0",
     "pino-pretty": "^8.1.0",
     "zod": "^3.17.10"
